--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.2.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.4.1",
+    "ngx-infinite-scroll": "^0.8.4",
     "rxjs": "^5.5.6",
     "sweetalert2": "^7.21.1",
     "zone.js": "^0.8.19"
